# GitInfo.cmake

./: CMakeLists.txt  README.md
test/: CMakeLists.txt  main.cpp
test/scripts/: build.sh
tools/: build.sh
